5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1836_1278.log
== TEST (2019-06-25 17:32:28) 
-- CODE:
from numpy import *
from numpy.linalg import *         


n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])


a=0
b=0
aux=111
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
	
while(n!=-1):
	n2 = int(input("digite 1: "))
	
	for i in range(7):
		if(n == vet[i]):
			a = i
		if(n2 == vet[i]):
			b=i
	soma+=,at[a,b]
	a=b
print(soma)


-- ERROR:
File "XXXX", line 27
    soma+=,at[a,b]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:32:40) 
-- CODE:
from numpy import *
from numpy.linalg import *         


n = int(input("digite 1: "))
n2 = int(input("digite 12: "))
mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])


a=0
b=0
aux=111
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
	
while(n!=-1):
	n2 = int(input("digite 1: "))
	
	for i in range(7):
		if(n == vet[i]):
			a = i
		if(n2 == vet[i]):
			b=i
	soma+=mat[a,b]
	a=b
print(soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:35:57) 
-- CODE:
from numpy import *
from numpy.linalg import *         



mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
	
n2 = int(input("digite 1: "))

while(n2!=-1):
	n = int(input("digite 1: "))
	
	for i in range(7):
		if(n2 == vet[i]):
			a = i
		if(n == vet[i]):
			b=i
	soma+=mat[b,a]
	a=b
print(soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:36:33) 
-- CODE:
from numpy import *
from numpy.linalg import *         



mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
	
n2 = int(input("digite 1: "))
n=1
while(n!=-1):
	n = int(input("digite 1: "))
	
	for i in range(7):
		if(n2 == vet[i]):
			a = i
		if(n == vet[i]):
			b=i
	soma+=mat[b,a]
	a=b
print(soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:38:09) 
-- CODE:
from numpy import *
from numpy.linalg import *         



mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
	
n = int(input("digite 1: "))
n2=1
while(n2!=-1):
	n2 = int(input("digite 1: "))
	
	for i in range(7):
		if(n == vet[i]):
			a = i
		if(n2 == vet[i]):
			b=i
	soma+=mat[a,b]
	a=b
	n=n2
print(soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 17:38:30) 
-- CODE:
from numpy import *
from numpy.linalg import *         



mat = array ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet= zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
	
n = int(input("digite 1: "))
n2=1
while(n2!=-1):
	n2 = int(input("digite 1: "))
	
	for i in range(7):
		if(n == vet[i]):
			a = i
		if(n2 == vet[i]):
			b=i
	soma+=mat[a,b]
	a=b
	n=n2
print(soma)


-- EXECUTION TIME:
0.981706
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
